# sui-cleaned

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  clippy.toml
.cargo/: config.toml  env-windows.bat  env-windows.ps1
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  build_failure.yml  cleanup_request.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
bench/: README.md
bench/api/rpc/: Cargo.toml
bench/rpc-loadgen/: Cargo.toml
bench/scripts/: run-sui-3v-benchmark-v2.ps1
crates/: README.md
crates/api/: README.md
crates/config/: README.md
crates/consensus/: README.md
crates/consensus/src/: authority_service.rs
crates/core/: README.md
crates/crypto/: README.md
crates/execution/: README.md
crates/execution/framework/: CONTRIBUTING.md  README.md
crates/execution/framework-snapshot/: manifest.json
crates/execution/move-build/: Cargo.toml
crates/execution/move/language/: .clippy.toml  Cargo.toml  README.md  tests.sh
crates/execution/move/language/testing/bytecode-verifier-tests/: Cargo.toml
crates/execution/move/language/tools/move-analyzer/prettier-plugin/: README.md
crates/execution/move/language/tools/move-analyzer/trace-adapter/tests/abort_native/: Move.toml
crates/execution/move/language/tools/move-analyzer/trace-adapter/tests/global_write/: Move.toml
crates/execution/move/language/tools/prettier-extension/: package.json
crates/execution/move/language/tools/tree-sitter/: run-tests.sh
crates/execution/move/language/tools/tree-sitter/bindings/rust/: build.rs  lib.rs
crates/execution/move/language/versions/v0/stdlib/: Cargo.toml
crates/execution/move/language/versions/v0/testing/: Cargo.toml
crates/execution/move/language/versions/v0/verifier/: Cargo.toml
crates/execution/move/language/versions/v0/vm/move-vm-runtime/: Cargo.toml
crates/execution/move/language/versions/v1/stdlib/: Cargo.toml
crates/execution/move/language/versions/v1/testing/: Cargo.toml
crates/execution/move/language/versions/v1/verifier/: Cargo.toml
crates/execution/move/language/versions/v1/vm/move-vm-runtime/: Cargo.toml
crates/execution/move/language/versions/v2/stdlib/: Cargo.toml
crates/execution/move/language/versions/v2/testing/: Cargo.toml
crates/execution/move/language/versions/v2/verifier/: Cargo.toml
crates/execution/move/language/versions/v2/vm/move-vm-runtime/: Cargo.toml
crates/execution/move/language/versions/v3/stdlib/: Cargo.toml
crates/execution/move/language/versions/v3/testing/: Cargo.toml
crates/execution/move/language/versions/v3/vm/move-vm-runtime/: Cargo.toml
crates/execution/move/language/vm/move-vm-runtime/: Cargo.toml
crates/execution/sui/: Cargo.toml
crates/execution/sui/cut/src/: path.rs  plan.rs
crates/execution/sui/latest/sui-adapter/: Cargo.toml
crates/execution/sui/latest/sui-move-natives/: Cargo.toml
crates/execution/sui/latest/sui-verifier/: Cargo.toml
crates/execution/sui/v0/sui-adapter/: Cargo.toml
crates/execution/sui/v0/sui-move-natives/: Cargo.toml
crates/execution/sui/v0/sui-verifier/: Cargo.toml
crates/execution/sui/v1/sui-adapter/: Cargo.toml
crates/execution/sui/v1/sui-move-natives/: Cargo.toml
crates/execution/sui/v1/sui-verifier/: Cargo.toml
crates/execution/sui/v2/sui-adapter/: Cargo.toml
crates/execution/sui/v2/sui-move-natives/: Cargo.toml
crates/execution/sui/v2/sui-verifier/: Cargo.toml
crates/execution/sui/v3/sui-adapter/: Cargo.toml
crates/execution/sui/v3/sui-move-natives/: Cargo.toml
crates/execution/sui/v3/sui-verifier/: Cargo.toml
crates/metrics/: README.md
crates/network/: README.md
crates/protocol/: README.md
crates/runtime/: README.md
crates/runtime/node/: Cargo.toml
crates/storage/: README.md
crates/types/: README.md
docs/: README.md  architecture.md  build.md  build_modes.md  ci.md  crate-boundaries.md  crate-move-map.tsv  crates_domains.md  crates_layout.md  domain_commands.md  embedded_sources.md  embedded_upstream.md  github.md  github_release_checklist.md  github_upload.md  inventory.md  license_attribution.md  linux_toolchain.md  move_upstream_paths.md  official_sui.md  parity_fixture_plan.md  project_identity.md  release.md  release_checklist.md  repo-layout.md  repo_cleanup.md  repo_hygiene.md  root_layout.md  root_simplification.md  runtime_layout.md  rust_workspace.md  script_inventory.md  source_map.md  sui_cleanup_strategy.md  troubleshooting.md  upstream_direct_paths.md  upstream_workspace.md  windows_build.md  windows_rocksdb.md  windows_toolchain.md  (+3 more)
scripts/: README.md  audit-crates-domains.bat  audit-crates-domains.py  audit-crates-domains.sh  audit-direct-paths.py  audit-workspace-inheritance.py  build.bat  build.ps1  build.sh  check-fast.bat  check-fast.sh  check-full.bat  check-full.sh  check-windows.bat  check-workspace.bat  check-workspace.sh  check.bat  check.ps1  check.sh  clean.bat  clean.sh  fetch-upstream-deps.bat  fetch-upstream-deps.sh  find-jemalloc-dependents.bat  find-jemalloc-dependents.sh  find-rocksdb-jemalloc.bat  find-rocksdb-jemalloc.sh  fmt.bat  package-map.py  repair-move-uint-version.bat  repair-move-uint-version.py  repair-move-uint-version.sh  repair-move-upstream-paths.bat  repair-move-upstream-paths.sh  repair-sui-execution-paths.bat  repair-sui-execution-paths.sh  repair-upstream-direct-paths.py  repair-upstream-workspace.bat  repair-upstream-workspace.sh  repair-windows-bindgen-libclang.bat  (+19 more)
scripts/lib/: audit-crates-domains.py  audit-direct-paths.py  audit-workspace-inheritance.py  package-map.py  repair-move-uint-version.py  repair-windows-bindgen-libclang.ps1  repair-windows-jemalloc.py  repair-windows-rocksdb-cstdint.ps1  windows-env.bat  windows-env.ps1
tests/: README.md
tools/: README.md
tools/scripts/: README.md  build.ps1  build.sh  check-layout.py  check.bat  check.ps1  check.sh  fmt.sh  repair-windows.sh  setup-windows.bat  setup-windows.ps1  status.sh
xtask/src/: main.rs
(+94 files in other folders)
