# Clean Sui Rust reference workspace.
# Members are organized by repo role: crates/, bench/, tests/, and tools/.

[workspace]
resolver = "2"
members = [
    "crates/runtime/xtask",
    "crates/api/json-rpc",
    "crates/api/json-rpc-api",
    "crates/api/light-client",
    "crates/api/rpc-api",
    "crates/api/rpc-resolver",
    "crates/api/rpc-store",
    "bench/rpc",
    "bench/rpc-loadgen",
    "bench/single-node",
    "bench/sui-benchmark",
    "crates/config/consensus",
    "crates/consensus/core",
    "crates/consensus/types",
    "crates/crypto/fork",
    "crates/crypto/keys",
    "crates/crypto/shared-crypto",
    "crates/crypto/tls",
    "crates/execution/authority-core",
    "crates/execution/framework",
    "crates/execution/framework-snapshot",
    "crates/execution/move-build",
    "crates/execution/move-cli",
    "crates/execution/package-resolver",
    "crates/execution/sui-execution",
    "crates/execution/sui-execution/cut",
    "crates/execution/sui-execution/latest/sui-adapter",
    "crates/execution/sui-execution/latest/sui-move-natives",
    "crates/execution/sui-execution/latest/sui-verifier",
    "crates/execution/sui-execution/v0/sui-adapter",
    "crates/execution/sui-execution/v0/sui-move-natives",
    "crates/execution/sui-execution/v0/sui-verifier",
    "crates/execution/sui-execution/v1/sui-adapter",
    "crates/execution/sui-execution/v1/sui-move-natives",
    "crates/execution/sui-execution/v1/sui-verifier",
    "crates/execution/sui-execution/v2/sui-adapter",
    "crates/execution/sui-execution/v2/sui-move-natives",
    "crates/execution/sui-execution/v2/sui-verifier",
    "crates/execution/sui-execution/v3/sui-adapter",
    "crates/execution/sui-execution/v3/sui-move-natives",
    "crates/execution/sui-execution/v3/sui-verifier",
    "crates/network/authority-aggregation",
    "crates/network/mysten-network",
    "crates/network/sui-network",
    "crates/config/protocol",
    "crates/config/protocol-macros",
    "crates/protocol/json-rpc-types",
    "crates/protocol/transaction-builder",
    "crates/protocol/transaction-checks",
    "crates/protocol/types",
    "crates/storage/consistent-store",
    "crates/storage/data-store",
    "crates/storage/kvstore",
    "crates/storage/snapshot",
    "crates/storage/sui-storage",
    "crates/storage/typed-store",
    "crates/storage/typed-store-derive",
    "crates/storage/typed-store-error",
    "tests/consensus/simtests",
    "tests/e2e",
    "tests/execution/adapter-transactional",
    "tests/execution/verifier-transactional",
    "tests/fixtures/transaction-builder",
    "tests/fuzz/transaction-fuzzer",
    "tests/json-rpc",
    "tools/genesis-builder",
    "tools/replay",
    "tools/replay-2",
    "tools/swarm",
    "tools/swarm-config",
    "tools/test-cluster",
    "tools/test-validator",
    "bench/network/anemo",
    "crates/runtime/version",
    "crates/runtime/common",
    "crates/runtime/metrics",
    "crates/runtime/service",
    "crates/runtime/metrics/prometheus-closure",
    "crates/runtime/simulator/simulacrum",
    "crates/runtime/cli",
    "crates/api/analytics-indexer",
    "crates/api/analytics-indexer-derive",
    "crates/protocol/bridge",
    "crates/protocol/bridge-schema",
    "tests/e2e/cluster",
    "crates/config/sui",
    "crates/protocol/cost",
    "crates/api/data-ingestion",
    "crates/config/defaults",
    "crates/protocol/display",
    "crates/protocol/enum-compat",
    "crates/api/faucet",
    "crates/protocol/field-count",
    "crates/protocol/field-count-derive",
    "tests/execution/framework",
    "crates/runtime/futures",
    "crates/network/http",
    "crates/api/indexer",
    "crates/api/indexer-consistent-api",
    "crates/storage/indexer-consistent-store",
    "crates/api/indexer-framework",
    "crates/storage/indexer-store-traits",
    "crates/api/indexer-graphql",
    "crates/api/indexer-jsonrpc",
    "crates/api/indexer-metrics",
    "crates/storage/indexer-object-store",
    "crates/api/indexer-reader",
    "crates/storage/indexer-schema",
    "crates/storage/inverted-index",
    "crates/api/json",
    "crates/api/kv-rpc",
    "crates/protocol/macros",
    "crates/config/metric-checker",
    "crates/runtime/metrics/push-client",
    "crates/execution/move-lsp",
    "crates/protocol/name-service",
    "crates/runtime/node",
    "crates/api/open-rpc",
    "crates/api/open-rpc-macros",
    "crates/execution/package-alt",
    "tools/package-dump",
    "tools/package-management",
    "crates/storage/pg-db",
    "crates/protocol/proc-macros",
    "crates/network/proxy",
    "crates/api/rosetta",
    "crates/api/sdk",
    "crates/runtime/simulator",
    "crates/execution/source-validation",
    "crates/storage/sql-macro",
    "tools/surfer",
    "crates/api/synthetic-ingestion",
    "crates/runtime/telemetry",
    "tools/sui-tool",
    "tests/execution/transactional-runner",
    "tests/execution/upgrade-compatibility",
    "crates/runtime/telemetry/subscribers",
    "tools/x",
]
default-members = [
    "crates/config/consensus",
    "crates/consensus/types",
    "crates/consensus/core",
    "crates/crypto/shared-crypto",
    "crates/crypto/keys",
    "crates/crypto/tls",
    "crates/config/protocol",
    "crates/config/protocol-macros",
    "crates/protocol/types",
    "crates/storage/typed-store-error",
    "crates/storage/typed-store-derive",
    "crates/storage/typed-store",
    "crates/network/mysten-network",
]

# Note: Sui-derived crates are embedded directly into the cleaned domain layout.
# Some package names intentionally remain upstream-compatible for Cargo path dependencies.

[workspace.package]
# This version string will be inherited by sui-core, sui-faucet, sui-node, sui-tools, sui-sdk, sui-move-build, and sui crates.
version = "1.75.0"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
# Without stripping, sui binary size would be > 1GB.
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

# Same as release, but unwind on panic.
[profile.release-unwind]
inherits = "release"
panic = 'unwind'

# Same as release, but build with lto (~50min build time).
[profile.release-lto]
inherits = "release"
# Enable Link Time Optimization for better runtime performance
lto = true
# Use single codegen unit to enable better optimizations
codegen-units = 1

# Same as release, but build binary with debug symbols (binary size will be ~ 1GB).
[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

# Inherits from the release profile above.
[profile.bench]
# For convenience.
strip = 'none'

[profile.test.package.move-compiler]
# opt-level 2 for move-compiler reduces the size of some of its
# (recursive) stack frames by up to 10x, avoiding stack overflows.
opt-level = 2

[profile.simulator]
inherits = "test"
debug = true
debug-assertions = true
overflow-checks = true
# opt-level 1 gives >5x speedup for simulator tests without slowing down build times very much.
opt-level = 1

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(msim)',
  'cfg(fail_points)',
] }

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
antithesis_sdk = "0.2.5"
anyhow = "1.0.71"
arrow = "57.3"
arrow-array = "57.3"
arc-swap = { version = "1.5.1", features = ["serde"] }
assert_cmd = "2.0.6"
async-graphql = "=7.0.1"
async-graphql-axum = "=7.0.1"
async-graphql-value = "=7.0.1"
async-recursion = "1.0.4"
async-stream = "0.3.6"
async-trait = "0.1.61"
atomic_float = "0.1"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-kms = { version = "1.97", default-features = false, features = ["rt-tokio"] }
axum = { version = "0.8", default-features = false, features = [
  "macros",
  "tokio",
  "http1",
  "http2",
  "json",
  "matched-path",
  "original-uri",
  "form",
  "query",
  "ws",
] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-server = { version = "0.8", default-features = false, features = [
  "tls-rustls-no-provider",
] }
backoff = { version = "0.4.0", features = [
  "futures",
  "futures-core",
  "pin-project-lite",
  "tokio",
  "tokio_1",
] }
base64 = "0.21.2"
base64-url = "2"
bcs = "0.1.4"
better_any = "0.1.1"
bimap = "0.6.2"
bincode = "1.3.3"
bip32 = "0.4.0"
byteorder = "1.4.3"
bytes = { version = "1.11.1", features = ["serde"] }
cached = "0.43.0"
camino = "1.1.1"
cfg-if = "1.0.0"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
clap = { version = "4.4", features = ["derive", "wrap_help"] }
clap_complete = "4.4"
colored = "2.0.0"
comfy-table = "6.1.3"
console-subscriber = "0.4.1"
const-str = "0.5.3"
count-min-sketch = "0.1.7"
criterion = { version = "0.5.0", features = [
  "async",
  "async_tokio",
  "html_reports",
] }
crossterm = "0.25.0"
csv = "1.2.1"
cynic = { version = "3.10.0", features = ["http-reqwest"] }
cynic-codegen = "= 3.10.0"
dashmap = "5.5.3"
# datatest-stable = "0.1.2"
datatest-stable = { git = "https://github.com/nextest-rs/datatest-stable.git", rev = "72db7f6d1bbe36a5407e96b9488a581f763e106f" }
derive-syn-parse = "0.1.5"
derive_more = "1.0.0"
diesel = "2.3"
diesel_migrations = "2.3"
diesel-async = "0.9"
dirs = "4.0.0"
duration-str = "0.5.0"
ed25519 = { version = "2", features = ["pkcs8", "alloc", "zeroize"] }
ed25519-consensus = { version = "2.0.1", features = ["serde"] }
either = "1.8.0"
enum_dispatch = "^0.3"
expect-test = "1.4.0"
eyre = "0.6.8"
fdlimit = "0.2.1"
flate2 = "1.0.28"
fs_extra = "1.3.0"
futures = "0.3.28"
getrandom = "0.2.9"
futures-core = "0.3.21"
git-version = "0.3.5"
governor = "0.6.0"
gcp_auth = "0.12.6"
hdrhistogram = "7.5.1"
headers = "0.4.0"
hex = "0.4.3"
http = "1"
http-body = "1"
humantime = "2.1.0"
hyper = "1"
hyper-util = "0.1.6"
hyper-rustls = { version = "0.27", default-features = false, features = [
  "webpki-roots",
  "http1",
  "http2",
  "ring",
  "tls12",
] }
im = "15"
indexmap = { version = "2.8.0", features = ["serde"] }
indoc = "2.0.6"
indicatif = "0.18.3"
inquire = "0.6.0"
insta = { version = "1.46.2", features = ["redactions", "yaml", "json"] }
insta-cmd = "0.6.0"
integer-encoding = "3.0.1"
iso8601 = "0.6.3"
itertools = "0.13.0"
tikv-jemalloc-ctl = "^0.5"
tikv-jemallocator = { version = "^0.5", features = [
  "profiling",
  "disable_initial_exec_tls",
] }
jsonrpsee = { version = "0.24.9", features = [
  "server",
  "macros",
  "ws-client",
  "http-client",
  "jsonrpsee-core",
] }
json_to_table = { git = "https://github.com/zhiburt/tabled/", rev = "e449317a1c02eb6b29e409ad6617e5d9eb7b3bd4" }
leb128 = "0.2.5"
lru = "0.10"
miette = { version = "7", features = ["fancy"] }
mime = "0.3"
mockall = "0.11.4"
moka = { version = "0.12", default-features = false, features = [
  "sync",
  "atomic64",
] }
more-asserts = "0.3.1"
msim = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "2c2ec3ffbc1e559c575dc7de1ff2498d1f6700f6", package = "msim" }
msim-macros = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "2c2ec3ffbc1e559c575dc7de1ff2498d1f6700f6", package = "msim-macros" }
multiaddr = "0.18.2"
nexlint = { git = "https://github.com/nextest-rs/nexlint.git", rev = "7ce56bd591242a57660ed05f14ca2483c37d895b" }
nexlint-lints = { git = "https://github.com/nextest-rs/nexlint.git", rev = "7ce56bd591242a57660ed05f14ca2483c37d895b" }
nonempty = { version = "0.9.0", features = ["serialize"] }
nonzero_ext = "0.3.0"
notify = "6.1.1"
num-bigint = "0.4.4"
num_cpus = "1.15.0"
num_enum = "0.6.1"
object_store = { version = "0.13.0", features = [
  "aws",
  "gcp",
  "azure",
  "http",
] }
once_cell = "1.18.0"
ouroboros = "0.17"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
parquet = "57.3"
pin-project = "1"
pin-project-lite = "0.2.13"
pkcs8 = { version = "0.10.0", features = ["std"] }
pprof = { version = "0.14.0", features = ["cpp", "frame-pointer"] }
pretty_assertions = "1.3.0"
proc-macro2 = "1.0.47"
prometheus = { version = "0.14", features = ["protobuf"] }
prometheus-http-query = { version = "0.8", default-features = false, features = [
  "rustls-tls",
] }
proptest = "1.6.0"
proptest-derive = "0.5"
prost = "0.14.1"
prost-build = "0.14.1"
prost-types = "0.14.1"
protox = "0.9"
protobuf = { version = "3.7", features = ["with-bytes"] }
quinn-proto = "0.11.7"
quote = "1.0.23"
rand = "0.8.5"
rayon = "1.5.3"
rcgen = "0.13"
regex = "1.7.1"
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "json",
  "rustls-tls",
] }
roaring = "0.11.3"
ron = "0.8.0"
rstest = "0.16.0"
rustc-hash = "2"
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
  "ring",
] }
rustls-pki-types = "1.11"
schemars = { version = "0.8.21", features = ["either"] }
scoped-futures = "0.1.3"
scopeguard = "1.1"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde-env = "0.2.0"
serde-name = "0.2.1"
serde-reflection = "0.5"
serde_json = { version = "1.0.95", features = ["preserve_order"] }
serde_repr = "0.1"
serde_with = "3.8"
sha2 = "0.9.3"
# serde_yaml = "0.9.21"
serde_yaml = "0.8.26"
shellexpand = "3.1.0"
signature = "1.6.0"
similar = "2.4.0"
simple_moving_average = "1.0.2"
simple-server-timing-header = "0.1.1"
slip10_ed25519 = "0.1.3"
smallvec = "1.10.0"
snap = "1.1.0"
snowflake-api = "0.14.0"
static_assertions = "1.1.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
syn = { version = "1.0.104", features = ["full", "derive", "extra-traits"] }
# syn = { version = "2", features = ["full", "fold", "extra-traits"] }
sysinfo = "0.35.2"
tabled = { version = "0.12" }
tap = "1.0.1"
tar = "0.4.45"
tempfile = "3.20.0"
test-fuzz = "3.0.4"
thiserror = "1.0.40"
timeout-tracing = "0.1.2"
tiny-bip39 = "1.0.0"
tokio = "=1.52.1"
tokio-rustls = { version = "0.26", default-features = false, features = [
  "tls12",
  "ring",
] }
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tokio-tungstenite = { version = "0.26.2", features = ["connect"] }
tokio-util = "0.7.18"
toml = { version = "0.7.4", features = ["preserve_order"] }
toml_edit = { version = "0.19.10" }
tonic = { version = "0.14.6", features = [
  "zstd",
  "transport",
  "tls-webpki-roots",
] }
tonic-build = "0.14.6"
tonic-prost = "0.14.6"
tonic-prost-build = "0.14.6"
tonic-health = "0.14.6"
tonic-reflection = "0.14.6"
tonic-web = "0.14.6"
tonic-rustls = "0.3.0"
tower = { version = "0.5", features = [
  "full",
  "util",
  "timeout",
  "load-shed",
  "limit",
] }
tower-http = { version = "0.5", features = [
  "cors",
  "full",
  "trace",
  "set-header",
  "propagate-header",
] }
tower-layer = "0.3.2"
twox-hash = "1.6.3"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
  "std",
  "smallvec",
  "fmt",
  "ansi",
  "time",
  "json",
  "registry",
  "env-filter",
] }
uint = "0.10.0"
unescape = "0.1.0"
ureq = "2.9.1"
url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
walkdir = "2.5.0"
webpki = { version = "0.103.10", package = "rustls-webpki", features = [
  "alloc",
  "std",
  "ring",
] }
which = "8.0.2"
winnow = "0.7"
wiremock = "0.5"
x509-parser = { version = "0.17.0", features = ["verify"] }
zstd = "0.12.3"
versions = "4.1.0"
shlex = "1.3.0"
starlark = "0.13.0"

# Move dependencies
# Upstream Move workspace dependencies needed by crates/execution/move-vm.
append-only-vec = "0.1.7"
aquamarine = "0.6.0"
arbitrary = { version = "1.1.7", features = ["derive", "derive_arbitrary"] }
bumpalo = "3.17.0"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
crossbeam = "0.8"
crossbeam-channel = "0.5.0"
curve25519-dalek = { version = "0.1.0", package = "curve25519-dalek-fiat", default-features = false, features = ["std", "u64_backend"] }
derive-where = "1.2.7"
dir-diff = "0.3.2"
dirs-next = "2.0.0"
dunce = "1.0.2"
ed25519-dalek = { version = "0.1.0", package = "ed25519-dalek-fiat", default-features = false, features = ["std", "serde", "u64_backend"] }
ethnum = "1.0.4"
fail = "0.4.0"
file_diff = "1.0.0"
heck = "0.3.2"
hex-literal = "0.3.4"
json_comments = "0.2.2"
lasso = { version = "0.7.3", features = ["multi-threaded", "inline-more"] }
libfuzzer-sys = "0.4"
log = { version = "0.4.14", features = ["serde"] }
lsp-server = "0.7.6"
lsp-types = "0.95.1"
memory-stats = "1.0.0"
named-lock = "0.2.0"
num = "0.4.0"
packed_struct = "0.10.1"
path-clean = "1.0.1"
petgraph = "0.8.1"
phf = { version = "0.11", features = ["macros"] }
pretty_simple = "0.1.1"
primitive-types = { version = "0.10.1", features = ["impl-serde"] }
ratatui = "0.30.0"
ref-cast = "1.0.6"
serde_spanned = { version = "0.6.8", features = ["serde"] }
sha3 = "0.9.1"
stacker = "0.1.15"
test-log = { version = "0.2.17", features = ["trace"] }
treeline = "0.1.0"
variant_count = "1.1.0"
vfs = "0.10.0"
whoami = { version = "1.2.1" }
inline_colorization = "0.1.6"
lcov = "0.8.1"
fs4 = { version = "0.13.1" }
bytecode-interpreter-crypto = { path = "crates/execution/move-vm/move/crates/bytecode-interpreter-crypto" }
enum-compat-util = { path = "crates/execution/move-vm/move/crates/enum-compat-util" }
invalid-mutations = { path = "crates/execution/move-vm/move/crates/invalid-mutations" }
module-generation = { path = "crates/execution/move-vm/move/crates/module-generation" }
move-borrow-graph = { path = "crates/execution/move-vm/move/crates/move-borrow-graph" }
move-bytecode-verifier = { path = "crates/execution/move-vm/move/crates/move-bytecode-verifier" }
move-bytecode-verifier-analyzer = { path = "." }
move-bytecode-viewer = { path = "crates/execution/move-vm/move/crates/move-bytecode-viewer" }
move-coverage = { path = "crates/execution/move-vm/move/crates/move-coverage" }
move-decompiler = { path = "crates/execution/move-vm/move/crates/move-decompiler" }
move-docgen = { path = "crates/execution/move-vm/move/crates/move-docgen" }
move-docgen-tests = { path = "crates/execution/move-vm/move/crates/move-docgen-tests" }
move-ir-compiler = { path = "crates/execution/move-vm/move/crates/move-ir-compiler" }
move-ir-to-bytecode = { path = "crates/execution/move-vm/move/crates/move-ir-to-bytecode" }
move-ir-to-bytecode-syntax = { path = "crates/execution/move-vm/move/crates/move-ir-to-bytecode-syntax" }
move-model = { path = "crates/execution/move-vm/move/crates/move-model" }
move-model-2 = { path = "crates/execution/move-vm/move/crates/move-model-2" }
move-proc-macros = { path = "crates/execution/move-vm/move/crates/move-proc-macros" }
move-regex-borrow-graph = { path = "crates/execution/move-vm/move/crates/move-regex-borrow-graph" }
move-stdlib = { path = "crates/execution/move-vm/move/crates/move-stdlib" }
move-stdlib-natives = { path = "." }
move-vm-runtime = { path = "crates/execution/move-vm/move/crates/move-vm-runtime" }
prover_bytecode = { path = "crates/execution/move-vm/move/crates/move-stackless-bytecode", package = "move-stackless-bytecode" }
jsonrpc = { path = "crates/execution/move-vm/move/crates/jsonrpc" }
move-binary-format = { path = "crates/execution/move-vm/move/crates/move-binary-format" }
move-bytecode-utils = { path = "crates/execution/move-vm/move/crates/move-bytecode-utils" }
move-bytecode-source-map = { path = "crates/execution/move-vm/move/crates/move-bytecode-source-map" }
move-bytecode-verifier-meter = { path = "crates/execution/move-vm/move/crates/move-bytecode-verifier-meter" }
move-cli = { path = "crates/execution/move-vm/move/crates/move-cli" }
move-compiler = { path = "crates/execution/move-vm/move/crates/move-compiler" }
move-core-types = { path = "crates/execution/move-vm/move/crates/move-core-types" }
move-disassembler = { path = "crates/execution/move-vm/move/crates/move-disassembler" }
move-package = { path = "crates/execution/move-vm/move/crates/move-package" }
move-package-alt = { path = "crates/execution/move-vm/move/crates/move-package-alt" }
move-package-alt-compilation = { path = "crates/execution/move-vm/move/crates/move-package-alt-compilation" }
move-unit-test = { path = "crates/execution/move-vm/move/crates/move-unit-test" }
move-vm-config = { path = "crates/execution/move-vm/move/crates/move-vm-config" }
move-vm-profiler = { path = "crates/execution/move-vm/move/crates/move-vm-profiler" }
move-command-line-common = { path = "crates/execution/move-vm/move/crates/move-command-line-common" }
move-transactional-test-runner = { path = "crates/execution/move-vm/move/crates/move-transactional-test-runner" }
move-ir-types = { path = "crates/execution/move-vm/move/crates/move-ir-types" }
move-stackless-bytecode = { path = "crates/execution/move-vm/move/crates/move-stackless-bytecode" }
move-stackless-bytecode-2 = { path = "crates/execution/move-vm/move/crates/move-stackless-bytecode-2" }
move-symbol-pool = { path = "crates/execution/move-vm/move/crates/move-symbol-pool" }
move-abstract-interpreter = { path = "crates/execution/move-vm/move/crates/move-abstract-interpreter" }
move-abstract-stack = { path = "crates/execution/move-vm/move/crates/move-abstract-stack" }
move-analyzer = { path = "crates/execution/move-vm/move/crates/move-analyzer" }
move-trace-format = { path = "crates/execution/move-vm/move/crates/move-trace-format" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c6010b9080b00e29d039a48c08898d90c2c1cbdd" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c6010b9080b00e29d039a48c08898d90c2c1cbdd" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c6010b9080b00e29d039a48c08898d90c2c1cbdd", package = "fastcrypto-zkp" }
fastcrypto-vdf = { git = "https://github.com/MystenLabs/fastcrypto", rev = "c6010b9080b00e29d039a48c08898d90c2c1cbdd", features = [
  "experimental",
] }
passkey-types = { version = "0.4.0" }
passkey-client = { version = "0.4.0" }
passkey-authenticator = { version = "0.4.0" }
coset = "0.3"
p256 = { version = "0.13.2", features = ["ecdsa"] }
quick_cache = { version = "0.6.18", features = ["stats"] }

p384 = { version = "0.13.0", default-features = false, features = [
  "ecdsa",
  "sha384",
] }
ciborium = "0.2"

# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "b1bda3f8555c5594a4966e850170cc11ecfcf557" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "b1bda3f8555c5594a4966e850170cc11ecfcf557" }
anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "b1bda3f8555c5594a4966e850170cc11ecfcf557" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "b1bda3f8555c5594a4966e850170cc11ecfcf557" }

# core-types from the new sdk for use in gRPC
sui-sdk-types = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "43c5bc13202ae398b1519a3eead1f40df8ca277b", features = [ "hash", "serde" ] }
sui-crypto = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "43c5bc13202ae398b1519a3eead1f40df8ca277b", features = [ "ed25519", "secp256r1", "secp256k1", "passkey", "zklogin" ] }
sui-rpc = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "43c5bc13202ae398b1519a3eead1f40df8ca277b", features = [ "unstable" ] }

### Workspace Members ###
anemo-benchmark = { path = "bench/network/anemo" }
bin-version = { path = "crates/runtime/version" }
mysten-common = { path = "crates/runtime/common" }
mysten-metrics = { path = "crates/runtime/metrics" }
mysten-network = { path = "crates/network/mysten-network" }
mysten-service = { path = "crates/runtime/service" }
prometheus-closure-metric = { path = "crates/runtime/metrics/prometheus-closure" }
shared-crypto = { path = "crates/crypto/shared-crypto" }
simulacrum = { path = "crates/runtime/simulator/simulacrum" }
sui = { path = "crates/runtime/cli" }
sui-adapter-transactional-tests = { path = "tests/execution/adapter-transactional" }
sui-analytics-indexer = { path = "crates/api/analytics-indexer" }
sui-analytics-indexer-derive = { path = "crates/api/analytics-indexer-derive" }
sui-authority-aggregation = { path = "crates/network/authority-aggregation" }
sui-benchmark = { path = "bench/sui-benchmark" }
sui-bridge = { path = "crates/protocol/bridge" }
sui-bridge-schema = { path = "crates/protocol/bridge-schema" }
sui-cluster-test = { path = "tests/e2e/cluster" }
sui-config = { path = "crates/config/sui" }
sui-consistent-store = { path = "crates/storage/consistent-store" }
sui-core = { path = "crates/execution/authority-core" }
sui-cost = { path = "crates/protocol/cost" }
sui-data-ingestion-core = { path = "crates/api/data-ingestion" }
sui-data-store = { path = "crates/storage/data-store" }
sui-default-config = { path = "crates/config/defaults" }
sui-display = { path = "crates/protocol/display" }
sui-e2e-tests = { path = "tests/e2e" }
sui-enum-compat-util = { path = "crates/protocol/enum-compat" }
sui-faucet = { path = "crates/api/faucet" }
sui-field-count = { path = "crates/protocol/field-count" }
sui-field-count-derive = { path = "crates/protocol/field-count-derive" }
sui-futures = { path = "crates/runtime/futures" }
sui-framework = { path = "crates/execution/framework" }
sui-framework-snapshot = { path = "crates/execution/framework-snapshot" }
sui-framework-tests = { path = "tests/execution/framework" }
sui-genesis-builder = { path = "tools/genesis-builder" }
sui-http = { path = "crates/network/http" }
sui-indexer-alt = { path = "crates/api/indexer" }
sui-indexer-alt-consistent-api = { path = "crates/api/indexer-consistent-api" }
sui-indexer-alt-consistent-store = { path = "crates/storage/indexer-consistent-store" }
sui-indexer-alt-framework = { path = "crates/api/indexer-framework", default-features = false }
sui-indexer-alt-framework-store-traits = { path = "crates/storage/indexer-store-traits" }
sui-indexer-alt-graphql = { path = "crates/api/indexer-graphql" }
sui-indexer-alt-jsonrpc = { path = "crates/api/indexer-jsonrpc" }
sui-indexer-alt-metrics = { path = "crates/api/indexer-metrics" }
sui-indexer-alt-reader = { path = "crates/api/indexer-reader" }
sui-indexer-alt-schema = { path = "crates/storage/indexer-schema" }
sui-indexer-alt-object-store = { path = "crates/storage/indexer-object-store" }
sui-json = { path = "crates/api/json" }
sui-json-rpc = { path = "crates/api/json-rpc" }
sui-json-rpc-api = { path = "crates/api/json-rpc-api" }
sui-json-rpc-types = { path = "crates/protocol/json-rpc-types" }
sui-keys = { path = "crates/crypto/keys" }
sui-inverted-index = { path = "crates/storage/inverted-index" }
sui-kvstore = { path = "crates/storage/kvstore" }
sui-kv-rpc = { path = "crates/api/kv-rpc" }
sui-light-client = { path = "crates/api/light-client" }
sui-macros = { path = "crates/protocol/macros" }
sui-metric-checker = { path = "crates/config/metric-checker" }
sui-metrics-push-client = { path = "crates/runtime/metrics/push-client" }
sui-move = { path = "crates/execution/move-cli" }
sui-move-build = { path = "crates/execution/move-build" }
sui-move-lsp = { path = "crates/execution/move-lsp" }
sui-name-service = { path = "crates/protocol/name-service" }
sui-network = { path = "crates/network/sui-network" }
sui-node = { path = "crates/runtime/node" }
sui-open-rpc = { path = "crates/api/open-rpc" }
sui-open-rpc-macros = { path = "crates/api/open-rpc-macros" }
sui-package-dump = { path = "tools/package-dump" }
sui-package-alt = { path = "crates/execution/package-alt" }
sui-package-management = { path = "tools/package-management" }
sui-package-resolver = { path = "crates/execution/package-resolver" }
sui-pg-db = { path = "crates/storage/pg-db" }
sui-proc-macros = { path = "crates/protocol/proc-macros" }
sui-protocol-config = { path = "crates/config/protocol" }
sui-protocol-config-macros = { path = "crates/config/protocol-macros" }
sui-proxy = { path = "crates/network/proxy" }
sui-replay = { path = "tools/replay" }
sui-replay-2 = { path = "tools/replay-2" }
sui-rosetta = { path = "crates/api/rosetta" }
sui-rpc-loadgen = { path = "bench/rpc-loadgen" }
sui-sdk = { path = "crates/api/sdk" }
sui-simulator = { path = "crates/runtime/simulator" }
sui-snapshot = { path = "crates/storage/snapshot" }
sui-source-validation = { path = "crates/execution/source-validation" }
sui-sql-macro = { path = "crates/storage/sql-macro" }
sui-storage = { path = "crates/storage/sui-storage" }
sui-surfer = { path = "tools/surfer" }
sui-swarm = { path = "tools/swarm" }
sui-swarm-config = { path = "tools/swarm-config" }
sui-synthetic-ingestion = { path = "crates/api/synthetic-ingestion" }
sui-telemetry = { path = "crates/runtime/telemetry" }
sui-test-transaction-builder = { path = "tests/fixtures/transaction-builder" }
sui-test-validator = { path = "tools/test-validator" }
sui-tls = { path = "crates/crypto/tls" }
sui-rpc-api = { path = "crates/api/rpc-api" }
sui-rpc-resolver = { path = "crates/api/rpc-resolver" }
sui-rpc-store = { path = "crates/api/rpc-store" }
sui-tool = { path = "tools/sui-tool" }
sui-transaction-builder = { path = "crates/protocol/transaction-builder" }
sui-transaction-checks = { path = "crates/protocol/transaction-checks" }
sui-transactional-test-runner = { path = "tests/execution/transactional-runner" }
sui-types = { path = "crates/protocol/types" }
sui-upgrade-compatibility-transactional-tests = { path = "tests/execution/upgrade-compatibility" }
sui-verifier-transactional-tests = { path = "tests/execution/verifier-transactional" }
telemetry-subscribers = { path = "crates/runtime/telemetry/subscribers" }
test-cluster = { path = "tools/test-cluster" }
transaction-fuzzer = { path = "tests/fuzz/transaction-fuzzer" }
typed-store = { path = "crates/storage/typed-store" }
typed-store-error = { path = "crates/storage/typed-store-error" }
x = { path = "tools/x" }
consensus-config = { path = "crates/config/consensus" }
consensus-core = { path = "crates/consensus/core" }
consensus-types = { path = "crates/consensus/types" }
consensus-simtests = { path = "tests/consensus/simtests" }

sui-execution = { path = "crates/execution/sui-execution" }
# sui-move-natives = { path = ".", package = "sui-move-natives-latest" }
# sui-adapter = { path = ".", package = "sui-adapter-latest" }
# sui-verifier = { path = ".", package = "sui-verifier-latest" }
# move-stdlib = { path = "." }
# move-vm-runtime = { path = "." }
# move-bytecode-verifier = { path = "." }

[patch.crates-io]
async-graphql = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }
async-graphql-axum = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }
async-graphql-value = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }
