[workspace]
resolver = "2"

members = [
    "api/*",
    "benchmarks/*",
    "compiler/*",
    "core/*",
    "fuzz/*",
    "packages/*",
    "stdlib/*",
    "testing/*",
    "tools/*",
    "verifier/*",
    "vm/*",
    "versions/v0/*/*",
    "versions/v1/*/*",
    "versions/v2/*/*",
    "versions/v3/*/*",
]

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
anyhow = "1.0.52"
append-only-vec = "0.1.7"
aquamarine = "0.6.0"
arbitrary = { version = "1.1.7", features = ["derive", "derive_arbitrary"] }
async-trait = "0.1.42"
bcs = "0.1.4"
better_any = "0.1.1"
bimap = "0.6.2"
bumpalo = "3.17.0"
clap = { version = "4", features = ["derive"] }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
colored = "2.0.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
crossbeam = "0.8"
crossbeam-channel = "0.5.0"
crossterm = "0.25.0"
curve25519-dalek = { version = "0.1.0", package = "curve25519-dalek-fiat", default-features = false, features = ["std", "u64_backend"] }
dashmap = "6.1.0"
datatest-stable = "0.1.1"
derive-where = "1.2.7"
dir-diff = "0.3.2"
dirs-next = "2.0.0"
dunce = "1.0.2"
ed25519-dalek = { version = "0.1.0", package = "ed25519-dalek-fiat", default-features = false, features = ["std", "serde", "u64_backend"] }
ethnum = "1.0.4"
fail = "0.4.0"
file_diff = "1.0.0"
futures = "0.3.12"
getrandom = "0.2.9"
heck = "0.3.2"
hex = "0.4.3"
hex-literal = "0.3.4"
im = "15.1.0"
indexmap = "2.8.0"
indoc = "2.0.6"
itertools = "0.10.0"
json_comments = "0.2.2"
leb128 = "0.2.5"
lasso = { version = "0.7.3", features = ["multi-threaded", "inline-more"] }
libfuzzer-sys = "0.4"
log = { version = "0.4.14", features = ["serde"] }
lru = "0.13.0"
lsp-server = "0.7.6"
lsp-types = "0.95.1"
memory-stats = "1.0.0"
named-lock = "0.2.0"
num = "0.4.0"
num_cpus = "1.13.0"
once_cell = "1.7.2"
ouroboros = "0.17.2"
packed_struct = "0.10.1"
parking_lot = "0.11.1"
path-clean = "1.0.1"
petgraph = "0.8.1"
phf = { version = "0.11", features = ["macros"] }
pretty_simple = "0.1.1"
pretty_assertions = "1.4.1"
primitive-types = { version = "0.10.1", features = ["impl-serde"] }
proptest = "1.6.0"
proptest-derive = "0.5"
quick_cache = { version = "0.6.18", features = ["stats"] }
quote = "1.0.9"
rand = "0.8.0"
ratatui = "0.30.0"
rayon = "1.10.0"
ref-cast = "1.0.6"
regex = "1.5.5"
serde = { version = "1.0.124", features = ["derive"] }
serde-reflection = "0.5"
serde_json = "1.0.64"
serde_spanned = { version = "0.6.8", features = ["serde"] }
serde_yaml = "0.8.26"
serde_with = "3.9.0"
sha2 = "0.9.3"
sha3 = "0.9.1"
similar = "2.4.0"
smallvec = "1.6.1"
stacker = "0.1.15"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
sysinfo = "0.35.2"
tempfile = "3.2.0"
test-log = { version = "0.2.17", features = ["trace"] }
thiserror = "1.0.24"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.5.8"
toml_edit = { version = "0.22.24", features = ["serde", "default"] }
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
treeline = "0.1.0"
uint = "0.9.4"
url = "2.2.2"
variant_count = "1.1.0"
vfs = "0.10.0"
walkdir = "2.3.1"
whoami = { version = "1.2.1" }
inline_colorization = "0.1.6"
insta = "1.42.0"
zstd = "0.13.2"
lcov = "0.8.1"
fs4 = { version = "0.13.1" }


bytecode-interpreter-crypto = { path = "vm/bytecode-interpreter-crypto" }
enum-compat-util = { path = "core/enum-compat-util" }
invalid-mutations = { path = "testing/invalid-mutations" }
jsonrpc = { path = "api" }
module-generation = { path = "compiler/module-generation" }
move-abstract-interpreter = { path = "compiler/move-abstract-interpreter" }
move-abstract-stack = { path = "compiler/move-abstract-stack" }
move-binary-format = { path = "core/move-binary-format" }
move-trace-format = { path = "core/move-trace-format" }
move-borrow-graph = { path = "compiler/move-borrow-graph" }
move-bytecode-source-map = { path = "core/move-bytecode-source-map" }
move-bytecode-utils = { path = "core/move-bytecode-utils" }
move-bytecode-verifier = { path = "verifier/move-bytecode-verifier" }
move-bytecode-verifier-meter = { path = "verifier/move-bytecode-verifier-meter" }
move-bytecode-viewer = { path = "tools/move-bytecode-viewer" }
move-cli = { path = "tools/move-cli" }
move-command-line-common = { path = "core/move-command-line-common" }
move-compiler = { path = "compiler/move-compiler" }
move-core-types = { path = "core/move-core-types" }
move-coverage = { path = "tools/move-coverage" }
move-decompiler = { path = "tools/move-decompiler" }
move-disassembler = { path = "tools/move-disassembler" }
move-docgen = { path = "tools/move-docgen" }
move-docgen-tests = { path = "testing/move-docgen-tests" }
move-ir-compiler = { path = "compiler/move-ir-compiler" }
move-ir-to-bytecode = { path = "compiler/move-ir-to-bytecode" }
move-ir-to-bytecode-syntax = { path = "compiler/move-ir-to-bytecode-syntax" }
move-ir-types = { path = "core/move-ir-types" }
move-model = { path = "compiler/move-model" }
move-model-2 = { path = "compiler/move-model-2" }
move-package = { path = "packages/move-package" }
move-package-alt = { path = "packages/move-package-alt" }
move-package-alt-compilation = { path = "packages/move-package-alt-compilation" }
move-proc-macros = { path = "compiler/move-proc-macros"}
move-regex-borrow-graph = { path = "compiler/move-regex-borrow-graph" }
move-stackless-bytecode = { path = "compiler/move-stackless-bytecode" }
move-stackless-bytecode-2 = { path = "compiler/move-stackless-bytecode-2" }
move-stdlib = { path = "stdlib" }
move-symbol-pool = { path = "core/move-symbol-pool" }
move-transactional-test-runner = { path = "testing/move-transactional-test-runner" }
move-unit-test = { path = "testing/move-unit-test" }
move-vm-config = { path = "vm/move-vm-config" }
move-vm-profiler = { path = "vm/move-vm-profiler" }
move-vm-runtime = { path = "vm/move-vm-runtime" }
prover_bytecode = { path = "compiler/move-stackless-bytecode", package = "move-stackless-bytecode" }

[profile.bench]
debug = true

[profile.dev]
debug = true

# use release settings to reduce memory pressure in the linking step in CI
[profile.ci]
inherits = "test"
debug = 0 # for saving disk space during linking
incremental = false
codegen-units = 16
